Fix databases and modules structure